# gazebo_vacuum_plugin

./: CMakeLists.txt  README.md  package.xml  vacuum.sdf
hooks/: gazebo_vacuum_plugin.dsv.in
include/: vacuum_plugin.hh
src/: VacuumPlugin.cc  vacuum_plugin.cc
